2006-07-13  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmCommand/fifos.c (fifos_get_default_name): 
	fix allocation when using FVWM_USERDIR

	* FvwmCommand/FvwmCommand.c (main): 
	* FvwmCommand/FvwmCommandS.c (open_fifos): 
	removed ifdefs for O_NOFOLLOW.

2006-07-12  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* FvwmCommand/fifos.c (fifos_get_default_name):
	replaced ifdefs

	* FvwmCommand/FvwmCommand.h:
	use libs/fvwm_sys_stat.h

2006-07-12  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* modules/FvwmPager/FvwmPager.c:
	Compilation fix when --enable-debug-msgs configure option set.

2006-07-11  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmCommand/FvwmCommand.1.in:
	Documented the FVWM_USERDIR fallback.

	* FvwmCommand/FvwmCommandS.c (server):
	* FvwmCommand/FvwmCommand.c (main):
	Exit if no name coude be decided on. (Only if FVWM_USERDIR is unset.)
	Open files with O_NOFOLLOW if defined.
	* FvwmCommand/fifos.c (fifos_get_default_name):
	Make sure that the name returned either referre to files owned by
	the process owner or does not exist. Use FVWM_USERDIR as fallback.

	* FvwmCommand/FvwmCommandS.c (server):
	* FvwmCommand/FvwmCommand.c (main):
	* FvwmCommand/FvwmCommand.h
	* FvwmCommand/fifos.c:
	* FvwmCommand/Makefile.am:
	Make sure FvwmCommandS and FvwmCommand use the same default names
	by moving the code from FvwmCommand to a separate common function.

2006-07-05  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmConsole/FvwmConsoleC.c (main):
	* FvwmConsole/getline.c:
	Renamed the function getline to get_line to not conflict with stdio's
	getline. (bug #3772)

2006-06-09  Scott Smedley  <ss@aao.gov.au>

	* FvwmTabs/FvwmTabs.in:
	Added "swallowIcon" option to provide visual feedback when tabber is
	going to unconditionally swallow the next window to popup.
	* FvwmTabs/FvwmTabs.pod:
	* FvwmTabs/FvwmTabs.1:
	Documented new "swallowIcon" option.
	List all mouse bindings available with the toolbar icons.

2006-05-31  Scott Smedley  <ss@aao.gov.au>
